Revised the main layout of the theme, thus fixing 3 issues: 1) The top of the left sidebar now changes with the height of the navbar, preventing the navbar from covering the sidebar no matter how tall it is. 2) The right sidebar is now in a flex layout with the main content container, preventing its content from being cut by the right and bottom edges of the window. 3) All layout content not related to the main layout has been separated into a base layout that the default layout extends. This means the default layout still provides sensible content alignment and padding to all pages by default, but pages that need ALL available space below the navbar can now escape the main layout by using the base layout.

--- a/assets/css/uikit-theme.scss
+++ b/assets/css/uikit-theme.scss
@@ -176,10 +176,8 @@ $offcanvas-bar-color-mode: dark;
 $sidebar-left-width: 240px;
 $sidebar-left-width-xl: 300px;
 
-$sidebar-right-width: 200px;
-$sidebar-right-left: 0px;
-$sidebar-right-left-xl: 60px;
-
+$sidebar-right-width: 260px;
+$sidebar-right-width-xl: 320px;
 
 
 /* HTML
@@ -217,10 +215,8 @@ html {
 // Sidebar Right
 
 .tm-sidebar-right {
-    position: absolute;
-    top: 0;
-    left: calc(100% + #{$sidebar-right-left});
-    width: $sidebar-right-width;
+    width: $sidebar-right-width !important;
+    padding-right: 40px;
 }
 
 /* Tablet landscape and bigger */
@@ -230,8 +226,7 @@ html {
 
 /* Desktop and bigger */
 @media (min-width: $breakpoint-large) {
-    .tm-sidebar-right { left: calc(100% + #{$sidebar-right-left}); }
-    .tm-sidebar-left + .tm-main { padding-left: $sidebar-left-width - ($sidebar-right-width + $sidebar-right-left); }
+    .tm-sidebar-left + .tm-main { padding-left: $sidebar-left-width; }
 }
 
 /* Large screen and bigger */
@@ -240,8 +235,11 @@ html {
         width: $sidebar-left-width-xl !important;
         padding: 45px 45px 60px 45px;
     }
-    .tm-sidebar-right { left: calc(100% + #{$sidebar-right-left-xl}); }
-    .tm-sidebar-left + .tm-main { padding-left: $sidebar-left-width-xl - ($sidebar-right-width + $sidebar-right-left-xl); }
+    .tm-sidebar-left + .tm-main { padding-left: $sidebar-left-width-xl; }
+    .tm-sidebar-right {
+        width: $sidebar-right-width-xl !important;
+        padding-right: 45px;
+    }
 }
 
 
